2022-02-26  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk: s/initially/currently command help string.

2022-02-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: Fix precedence of EXCOND.

2022-02-18  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf-64.pk: Fix IOS in in-method mappings.

2022-02-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk (dump): Fix start of ASCII dump when :from is
	used.
	* testsuite/poke.cmd/dump-13.pk (pk_dump_ascii): New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-02-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (pk_cmd_mem): Create uniquely named memory IOS
	if no name is specified in .mem.

2022-02-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (print_help): Do not use pk-term.
	(pk_print_version): Likewise.
	(parse_args_2): Likewise.
	(pk_fatal): Likewise.
	(parse_args_1): Handle HELP_ARG and VERSION_ARG here.
	(parse_args_2): ... instead of here.

2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-save.pk: Do not capitalize summary in help entry.
	* poke/pk-extract.pk: Likewise.
	* poke/pk-copy.pk: Likewise.
	* poke/pk-scrabble.pk: Likewise.

2022-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Integer Attributes): Update accordingly.
	(Offset Attributes): Likewise.

	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Allow using 'length
	in any kind of value.
	* testsuite/poke.pkl/attr-length-12.pk: New test.
	* testsuite/poke.pkl/attr-length-13.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-02-09  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-ios.c (pk_open_proc_maps): Use PRIx64 instead of %lx.
	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Use PRIu64
	isntead of %lu.

2022-02-08  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.libpoke/term-if.h (pk_term_end_class): Return 1.

2022-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump version to 2.1.
	* NEWS: Likewise.