@@ -1,5 +1,12 @@
 2022-02-26  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.pkl/array-type-diag-2.pk: New test.
+
+	* libpoke/pkl-anal.c (pkl_anal1_ps_type_array): New handler.
+	(pkl_phase_anal1): Install handler.
+
+2022-02-26  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-dump.pk: s/initially/currently command help string.
 
 2022-02-20  Jose E. Marchesi  <jemarch@gnu.org>
